[package]
name = "wasm_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tempfile = "3.10.1"

[features]
default = ['wasmgc']
wasm = ['disable_gc']
wasmgc = ['copy_gc']
disable_gc = []
mark_sweep_gc = []
copy_gc = []
gc_log = []
gc_time_measure = []
